# og-image-rs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md
src/: env.rs  main.rs  prelude.rs
src/generator/: mod.rs  random_status.rs  utils.rs
src/routes/: generator.rs  mod.rs  music_thumb.rs  naotimes_og.rs  template.rs
templates/: user_card_template.html
