[package]
name = "naotimes_open_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["tracing", "query"] }
og_image_writer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.18"
anyhow = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy_static = "1"
reqwest = { version = "0.11"}
urlencoding = { version = "2" }
image = "0.24"
imageproc = "0.23"
dotenv = "0.15"
tera = "1"
chrono = "0.4.31"
rand = "0.8.5"
