[package]
name = "naotimes_open_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tracing", "query"] }
og_image_writer = "0.11.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_qs = "0.13.0"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
scraper = "0.20.0"
anyhow = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
reqwest = "0.12.5"
urlencoding = "2"
image = { version = "0.25.2", features = ["jpeg", "png"], default-features = false }
dotenvy = "0.15.7"
chrono = "0.4.38"
rand = "0.8.5"
